pkg/chisel/testdata/valid/57_twist.chisel
box(1, 1, 2).twist(1)
