pkg/chisel/testdata/errors/06_undefined_variable.chisel
unknown_func(1, 2, 3)
